Cambio del gif de la página

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Este es el inicio de la página de Alonso Hern&aacute;ndez</h1>
 <p>P&aacute;gina creada en el curso de Git y Github de Platzi</p>
-<p><img src="https://lh3.googleusercontent.com/DGDEoM2HZcg4-u5fCaCmrtfYmHcp3pZ433Thkqu2Gno_K9xdCpKFn5TyOqVjZkWm6lMbdYKGc8iAUu0AnfhBNeCe4jmBTN4lWzs6opgip6MkpL4sIWzdVbPLBEhdhXiBpP7Yz-v9" width="100%"></p>
+<p><img src="https://staffrh.hiringroom.com/data/accounts/staffrh/vacancies/8b47eccebeafd1eb431f28688267ce9b.gif" width="680px"></p>
